# LanguageWizard

./: README.md  app.py  pyproject.toml
static/css/: style.css  style_ai.css  style_x.css
static/js/: js.js
templates/: ai.html  magician.html  magician_x.html  wizard.html  x.html
test/: style.css  wizard.html
view/: magician_x.html
