[tool.poetry]
name = "languagewizard"
version = "0.1.0"
description = ""
authors = ["YOUNGDEUKKOO <koolight89@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
